--- a/index.html
+++ b/index.html
@@ -420,9 +420,9 @@
 
 <div class="submit">
       <form>
-
+            <a href="https://api.whatsapp.com/send?phone=9730613011">
           <input type="submit" value="Submit" id="subtv">
-
+        </a>
      </form>
 </div>
 
