--- a/index.html
+++ b/index.html
@@ -1,451 +1,374 @@
 <!doctype html>
 <html>
+
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type=" text/css" href="textme.css">
 
-  <link rel="stylesheet" type=" text/css" href="hero.css">
-  <link rel="stylesheet" type=" text/css" href="contact.css">
-  <link rel="stylesheet" type=" text/css" href="work.css">
-  <link rel="stylesheet" type=" text/css" href="rates.css">
-<link rel="stylesheet" type=" text/css" href="fake.css">
-
-  </head>
-<body>
-<!--
-<div class="box" id="0"> -->
-<div class=hero>
-  <div class="menubar">
-
-  <ul>
-    <li><a href="">Home</a></li>
-    <li > <a href="#2">  Detection </a>
-
-
-      <div class="submenu" >
-        <ul>
-          <li><a href="#"></a>Potato</a></li>
-          <li><a href="#">Rusberry</a></li>
-          <li><a href="#">apple</a></li>
-          <li><a href="#">corn</a></li>
-          <li><a href="#">tomato</a></li>
-        </ul>
-      </div>
-
-
-    </li>
-    <li><a href="#1">Consultant</a></li>
-    <li><a href="#textme">Text US</a></li>
-    <li class="active"> <a href="">Rates</a>
-
-      <div class="rmenu" >
-        <ul>
-          <li><a href="#"></a>Potato</a>
-
-            <div class="rmenu" >
-              <ul>
-                <li><a href="#">35</a></li>
-              </ul>
-            </div>
-
-
-          </li>
-          <li><a href="#">Rusberry</a>
-
-            <div class="rmenu" >
-              <ul>
-                <li><a href="#">160</a></li>
-              </ul>
-            </div>
-          </li>
-          <li><a href="#">apple</a>
-
-            <div class="rmenu" >
-              <ul>
-                <li><a href="#">200</a></li>
-              </ul>
-            </div></li>
-          <li><a href="#">corn</a>
-
-            <div class="rmenu" >
-              <ul>
-                <li><a href="#">80</a></li>
-              </ul>
-            </div></li>
-          <li><a href="#">tomato</a>
-            <div class="rmenu" >
-              <ul>
-                <li><a href="#">40</a></li>
-              </ul>
-            </div></li>
-        </ul>
-      </div>
-
-
-
-
-
-    </li>
-  </ul>
-
-</div>
-
-</div>
-
-
-
-<div class="work" id="2">
-
-          <div class="title">
-
-            <h1 id="title" style=" color:black;" align-text=center;>Detection
-            </h2>
-          </div>
-
-
-          <div class="workbox">
-
-            <div class="workimg">
-              <div class="i1">
-
-            </div>
-
-            </div>
-            <div class="workimg">
-              <div class="i2">
-                </div>
-
-            </div>
-
-            <div class="workimg">
-              <div class="i3">
-
-                </div>
-            </div>
-
-
-            <div class="workimg">
-              <div class="i4">
-
-                </div>
-
-            </div>
-
-            <div class="workimg">
-              <div class="i5">
-
-              </div>
-            </div>
-
-
-            <div class="workimg">
-              <div class="i6">
-
-            </div>
-              </div>
-
-
-
-          </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</div>
-
-<br>
-<br>
-<br>
-
-
-<div class="about" id="2">
-
-          <div class="title" style="text-align:center">
-
-            <h1 id="title"style="color:black;">More About <span  style="color:orange;" id="multi">
-            us</span>
-            </h2>
-
-          </div>
-
-          <div class="pers">
-
-
-
-
-
-            </div>
-              <p id="history">
-
-              </p>
-
-
-
-          </div>
-
-
-
-
-
-
-
-</div>
-<br>
-<br>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="contact" id="1">
-
-            <div class="title"style="text-align:center">
-
-                      <h1 id="title">   Consultant
-                      </h2>
-          </div>
-
-
-          <div class="social">
-
-
-
-            <div class="container">
-              <img src="img/fake.jpg" alt="Avatar" class="image" style="width:100%">
-              <div class="middle">
-                <div >Name</div>
-                <div >Contact</div>
-                <div>social</div>
-
-              </div>
-            </div>
-            <div class="container">
-              <img src="img/fake.jpg" alt="Avatar" class="image" style="width:100%">
-              <div class="middle">
-                <div >Name</div>
-                <div >Contact</div>
-                <div>social</div>
-
-              </div>
-            </div>  <div class="container">
-                <img src="img/fake.jpg" alt="Avatar" class="image" style="width:100%">
-                <div class="middle">
-                  <div >Name</div>
-                  <div >Contact</div>
-                  <div>social</div>
-
-                </div>
-              </div>  <div class="container">
-                  <img src="img/fake.jpg" alt="Avatar" class="image" style="width:100%">
-                  <div class="middle">
-                    <div >Name</div>
-                    <div >Contact</div>
-                    <div>social</div>
-
-                  </div>
-                </div>  <div class="container">
-                    <img src="img/fake.jpg" alt="Avatar" class="image" style="width:100%">
-                    <div class="middle">
-                      <div >Name</div>
-                      <div >Contact</div>
-                      <div>social</div>
-
-                    </div>
-                  </div>
-
-            <!--
-                      <div class="so">
-                              <a  href="">
-                      <img src="img/co.png" alt="">
-                                      </a>
-                                      <h3 id="kia">
-                                        NAME:--X  Y  Z<br>
-                                        Degree<br>
-                                        Consultant for :
-
-                                      </h3>
-
-
-
-                      </div>
-
-
-
-
-                      <div class="so">
-                              <a  href="">
-                                                    <img src="img/co.png" alt="">
-                                      </a>
-                                      <h3 id="kia">
-                                        NAME:--X  Y  Z<br>
-                                        Degree<br>
-                                        Consultant for :
-
-
-                                      </h3>
-
-
-                      </div>
-
-
-                      <div class="so">
-                              <a  href="">
-                                                    <img src="img/co.png" alt="">
-                                      </a>
-                                      <h3 id="kia">
-                                        NAME:--X  Y  Z<br>
-                                        Degree<br>
-                                        Consultant for :
-
-
-                                      </h3>
-
-
-                      </div>
-
-
-                      <div class="so">
-                              <a  href="">
-                                      <img src="img/co.png" alt="">
-                                      </a>
-                                      <h3 id="kia">
-                                        NAME:--X  Y  Z<br>
-                                        Degree<br>
-                                        Consultant for :
-
-
-                                      </h3>
-
-
-                      </div>
-
-                      <div class="so">
-                              <a  href="">
-                                                    <img src="img/co.png" alt="">
-                                      </a>
-                                      <h3 id="kia">
-                                        NAME:--X  Y  Z<br>
-                                        Degree:<br>
-                                        Consultant for :
-
-
-                                      </h3>
-
-
-                      </div>
-
-
-
-
-
-
-
-
-          </div>
+  <!--
+ bootstrap
 
 -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+
+  <script src={{ url_for('static', filename='js/fe.js') }} ></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
+  <link rel="stylesheet" type=" text/css" href={{ url_for('static', filename='css/style.css') }} />
+  <link rel="stylesheet" type=" text/css" href={{ url_for('static', filename='css/style2.css') }} />
+
+  <link rel="stylesheet" type=" text/css" href={{ url_for('static', filename='css/responsive.css') }} />
+  <link rel="icon" href="img/hipg.png">
+
+  <title>Detection Zone</title>
+
+</head>
+
+<body>
+
+  <div class=hero style="background-image: url(static/images/ll.jpg);">
+    <div class="menubar">
+
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="#1">Consultant</a></li>
+        <li><a href="#textme">Text US</a></li>
+        <li class="active"> <a href="https://www.punediary.com/html/veg.html">Rates</a>
+
+        </li>
+      </ul>
+
+    </div>
+
+
+    <div class="dbtext">
+      <p>
+        Reap higher yields with
+      </p>
+      <p id="hh">the help of this</p>
+      <p style="padding-left: 90px;"> Website </p>
+      <p id="kl">Your crop Doctor</p>
+
+    </div>
+
+    <div class="db">
+      <button type="button" class="btn btn-primary btn-lg"><a href="/index" style="text-decoration: none; color: white;">
+        Detection</a></button>
+      
+
+    </div>
+
+
+
+  </div>
+
+</div>
+
+
+
+<div style="width: inherit; height: 30px; background-color: #16db93;"> </div>
+
+
+
+<div class="lala">
+
+
+  <div class="count">
+    <div class="ele">
+      <h1>6</h1>
+    </div>
+    <div class="ele">
+      <h1>5s</h1>
+    </div>
+    <div class="ele">
+      <h1>--</h1>
+    </div>
+    <div class="ele">
+      <h1>9000</h1>
+    </div>
+
+  </div>
+  <div class="ctex">
+    <div class="glk">No.Crops</div>
+    <div class="glk">time to detect</div>
+    <div class="glk">no of times used</div>
+    <div class="glk">Data set images</div>
+  </div>
+
 
 </div>
 
 
 
 
+<div class="seconddiv">
+  <div class="first">
+      <img class="images1" src= {{ url_for('static', filename='images/sdi1.jpg') }} />
+
+      <h2>How To Detect Crop Disease?</h2>
+      <p>1]Take a photo of defected plant leaf. <br>
+         2]Upload the image or photo. <br>
+         3]Click on detect disease.
+      </p>
+      <br>
+  </div>
+  <div class="first">
+      <img class="image2" src= {{ url_for('static', filename='images/sdi2.jpg') }} />
+
+      <h2 style="padding-left: 100px;">Go for Detection</h2>
+      <button class="btn" ><a href="crop.html" style="text-decoration: none; color:white;">Click Here </a></button>
+  </div><br><br><br><br><br><br><br><br><br><br><br>
+</div>
 
 
 
-<div class="textme">
+<div style="width: inherit; height: 30px; background-color: #16db93;"> </div>
+  <div class="contact" id="1">
 
-                  <h2  id="textme"> Text Us
-                  </h2>
+    <div class="title" style="text-align:center">
 
-        <br>
-
-        <br>
-
-
+      <h1 id="title"> Consultant
+      </h1>
+    </div>
 
 
-<div class="textbox">
-
-<div class="g">
+    <div class="social">
 
 
-      <form >
+
+      <div class="container">
+        <img  alt="Avatar" class="image" style="width:100%">
+        <div class="middle" src= {{ url_for('static', filename='images/fake.jpg') }} />
+          <div>Name</div>
+          <div>Contact</div>
+          <div>social</div>
+
+        </div>
+      </div>
+      <div class="container">
+        <img alt="Avatar" class="image" style="width:100%" src= {{ url_for('static', filename='images/fake.jpg') }} />
+        <div class="middle">
+          <div>Name</div>
+          <div>Contact</div>
+          <div>social</div>
+
+        </div>
+      </div>
+      <div class="container">
+        <img alt="Avatar" class="image" style="width:100%"  src= {{ url_for('static', filename='images/fake.jpg') }} />
+        <div class="middle">
+          <div>Name</div>
+          <div>Contact</div>
+          <div>social</div>
+
+        </div>
+      </div>
+      <div class="container">
+        <img alt="Avatar" class="image" style="width:100%"  src= {{ url_for('static', filename='images/fake.jpg') }} />
+        <div class="middle">
+          <div>Name</div>
+          <div>Contact</div>
+          <div>social</div>
+
+        </div>
+      </div>
+      <div class="container">
+        <img alt="Avatar" class="image" style="width:100%"  src= {{ url_for('static', filename='images/fake.jpg') }} />
+        <div class="middle">
+          <div>Name</div>
+          <div>Contact</div>
+          <div>social</div>
+
+        </div>
+      </div>
+
+
+
+
+
+
+
+      <div>
+        <h1 id="wish">Agriculture is our wisest pursuit because it will in the end contribute most to real wealth, Good
+          Morals and happiness</h1>
+      </div>
+
+    </div>
+
+
+
+
+
+
+
+    <div class="textme" style="background-image: url(static/images/textme.png);">
+
+      <h2 id="textme"> Text Us
+      </h2>
+
+      <br>
+
+      <br>
+
+
+
+
+      <div class="textbox">
+
+        <div class="g">
+
+
+          <form>
             <label for="fname">First name:</label><br>
             <input type="text" id="fname" name="fname">
-  <br>
-  <br>
-  <br>
+            <br>
+            <br>
+            <br>
 
             <label for="lname">Last name:</label><br>
-              <input type="text" id="lname" name="lname">
-      </form>
+            <input type="text" id="lname" name="lname">
+          </form>
+        </div>
+
+
+
+        <div class="mess">
+          <form>
+
+            <input type="text" id="text" name="fname" maxlength="150"><br>
+
+          </form>
+        </div>
+
+
+
+        <div class="submit">
+          <form>
+
+
+
+
+            <!--<input type="submit" value="Submit" id="subtv">-->
+            <div class="subtv">
+              <a href="https://api.whatsapp.com/send?phone=+919960498921%20Hi%20My%20name%20is%20Rohan%20and%20what%20can%20i%20do%20for%20you%20"
+                id="whatsapp"> Send......</a>
+            </div>
+
+
+          </form>
+        </div>
+
+
+
+
+
+      </div>
+
+
+
+
+
+
+
+    </div>
+
+
+    <br>
+
+
+    <div class="about" id="2">
+
+      <div class="title" style="text-align:center">
+
+        <h1 id="title" style="color:black;">More About <span style="color:orange;" id="multi">
+            us</span>
+        </h1>
+
+      </div>
+      <br>
+      <div class="pers">
+
+
+
+        <div class="containerg">
+          <img alt="Avatar" class="image" style="width:100%"  src= {{ url_for('static', filename='images/fake.jpg') }} />
+
+        </div>
+
+        <div class="containerg">
+          <img alt="Avatar" class="image" style="width:100%"  src= {{ url_for('static', filename='images/fake.jpg') }} />
+
+        </div>
+
+        <div class="containerg">
+          <img alt="Avatar" class="image" style="width:100%"  src= {{ url_for('static', filename='images/fake.jpg') }} />
+
+        </div>
+
+        <div class="containerg">
+          <img alt="Avatar" class="image" style="width:100%"  src= {{ url_for('static', filename='images/fake.jpg') }} />
+
+        </div>
+
+        <div class="containerg">
+          <img alt="Avatar" class="image" style="width:100%"  src= {{ url_for('static', filename='images/fake.jpg') }} />
+
+        </div>
+
+
+
+
+      </div>
+      <br>
+
+
+<div class="his">
+ <h5>Pranav Kushare
+</h5>
+<h5>Rohan Magar
+</h5>
+<h5>Ankit Mahalpure
+</h5>
+<h5>Mehul Pachpol
+</h5>
+<h5>Digvijay Patil
+</h5>
+
 </div>
 
-
-
-<div class="mess">
-      <form>
-
-      <input type="text" id="text" name="fname" maxlength="150"><br>
-
-      </form>
+<div class="his">
+<span style="padding-left: 50%; font-size:30px; font-weight: 1000;">Work</span>
 </div>
 
+<div class="his">
+  <h5>Roll No:27
+ </h5>
+ <h5>Roll No:31
+ </h5>
+ <h5>Roll No:32
+ </h5>
+<h5>Roll No:44
+</h5>
+ <h5>Roll No:49
+ </h5>
+
+ </div>
+
+ <div class="his">
+  <span style="padding-left: 47%; font-size:30px; font-weight: 1000;"><span style=" color:red">G</span>uided <span  style=" color:red"> B</span>y</span>
+
+ </div>
 
 
-<div class="submit">
-      <form>
-             <div class="subtv">
-            <a href="https://api.whatsapp.com/send?phone=+919960498921%20Hi%20My%20name%20is%20Rohan%20and%20what%20can%20i%20do%20for%20you%20" id="whatsapp"> Send......</a>
-          </div>
+ <div class="his">
+  <span style="padding-left:40%; font-size:30px; font-weight: 1000;">Prof. Prakash Vaidya </span>
 
+ </div>
 
-     </form>
-</div>
-
-
-
-
-
-</div>
-
-
-
-
-
-
-
-</div>
-
-
-
-
-
+    </div>
 
 </body>
+
 </html>
